--- a/src/main/java/com/verona/view/buscarVentas.fxml
+++ b/src/main/java/com/verona/view/buscarVentas.fxml
@@ -5,27 +5,48 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="744.0" prefWidth="872.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.BuscarVentasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="744.0" prefWidth="872.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.BuscarVentasController">
    <children>
       <Label layoutX="306.0" layoutY="14.0" text="BUSCAR VENTA">
          <font>
             <Font name="Arial Bold" size="26.0" />
          </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.30000001192092896" />
+               </color>
+            </DropShadow>
+         </effect>
       </Label>
-      <Label layoutX="4.0" layoutY="58.0" text="Ingrese ID de Cliente:">
+      <Label layoutX="260.0" layoutY="66.0" text="Ingrese ID de Cliente:">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font></Label>
-      <Label layoutX="507.0" layoutY="58.0" text="Nombre de Cliente:">
+      <TextField fx:id="idClienteTextField" layoutX="413.0" layoutY="61.0" prefHeight="26.0" prefWidth="186.0">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.3499999940395355" />
+               </color>
+            </DropShadow>
+         </effect></TextField>
+      <Button fx:id="btnBuscar" layoutX="384.0" layoutY="98.0" mnemonicParsing="false" onAction="#btnBuscarClicked" style="-fx-background-color: FFAA00;" text="Buscar">
          <font>
             <Font name="Arial Bold" size="13.0" />
-         </font></Label>
-      <TextField fx:id="idClienteTextField" layoutX="144.0" layoutY="52.0" prefHeight="26.0" prefWidth="105.0" />
-      <TextField fx:id="nombreClienteTextField" layoutX="647.0" layoutY="53.0" />
-      <Button fx:id="btnBuscar" layoutX="383.0" layoutY="79.0" mnemonicParsing="false" onAction="#btnBuscarClicked" style="-fx-background-color: FFAA00;" text="Buscar" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect></Button>
       <Separator layoutX="-1.0" layoutY="132.0" prefHeight="16.0" prefWidth="872.0" />
       <Label fx:id="resultadoLabel" layoutX="330.0" layoutY="115.0" prefHeight="17.0" prefWidth="160.0" />
       <Label fx:id="idLabel" layoutX="14.0" layoutY="148.0" text="ID:">
@@ -109,19 +130,29 @@
       <Label fx:id="idLabelToComplete" layoutX="40.0" layoutY="148.0" prefHeight="17.0" prefWidth="186.0" />
       <Label fx:id="nombreLabelToComplete" layoutX="80.0" layoutY="175.0" prefHeight="17.0" prefWidth="246.0" />
       <Label fx:id="descripcionLabelToComplete" layoutX="11.0" layoutY="215.0" prefHeight="79.0" prefWidth="376.0" wrapText="true" />
-      <Button fx:id="btnVolver" layoutX="385.0" layoutY="704.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver" />
+      <Button fx:id="btnVolver" layoutX="385.0" layoutY="704.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect></Button>
       <Label fx:id="fechaCreacionLabelToComplete" layoutX="144.0" layoutY="311.0" prefHeight="17.0" prefWidth="227.0" />
       <Label fx:id="fechaTerminacionLabelToComplete" layoutX="164.0" layoutY="343.0" prefHeight="17.0" prefWidth="207.0" />
       <Label fx:id="colocadorLabelToComplete" layoutX="534.0" layoutY="311.0" prefHeight="17.0" prefWidth="265.0" />
-      <Label fx:id="precioColocacionLabelToComplete" layoutX="582.0" layoutY="343.0" prefHeight="17.0" prefWidth="207.0" />
+      <Label fx:id="precioColocacionLabelToComplete" layoutX="582.0" layoutY="343.0" prefHeight="17.0" prefWidth="246.0" />
       <Label fx:id="telefonoLabelToComplete" layoutX="96.0" layoutY="380.0" prefHeight="17.0" prefWidth="207.0" />
       <Label fx:id="telefono2LabelToComplete" layoutX="151.0" layoutY="413.0" prefHeight="17.0" prefWidth="175.0" />
       <Label fx:id="emailLabelToComplete" layoutX="89.0" layoutY="446.0" prefHeight="17.0" prefWidth="227.0" />
       <Label fx:id="materialLabelToComplete" layoutX="538.0" layoutY="148.0" prefHeight="17.0" prefWidth="218.0" />
       <Label fx:id="colorLabelToComplete" layoutX="535.0" layoutY="175.0" prefHeight="17.0" prefWidth="227.0" />
       <Label fx:id="estadoLabelToComplete" layoutX="535.0" layoutY="205.0" prefHeight="17.0" prefWidth="227.0" />
-      <Label fx:id="importeTotalLabelToComplete" layoutX="563.0" layoutY="237.0" prefHeight="17.0" prefWidth="207.0" />
-      <Label fx:id="saldoLabelToComplete" layoutX="534.0" layoutY="276.0" prefHeight="17.0" prefWidth="186.0" />
+      <Label fx:id="importeTotalLabelToComplete" layoutX="563.0" layoutY="237.0" prefHeight="17.0" prefWidth="273.0" />
+      <Label fx:id="saldoLabelToComplete" layoutX="534.0" layoutY="276.0" prefHeight="17.0" prefWidth="286.0" />
       <Button fx:id="btnGenerarPDF" layoutX="463.0" layoutY="380.0" mnemonicParsing="false" onAction="#btnGenerarPDFClicked" style="-fx-background-color: black;" text="Generar PDF" textFill="WHITE" />
       <Separator fx:id="linea1" layoutX="-2.0" layoutY="169.0" prefHeight="7.0" prefWidth="872.0" />
       <Separator fx:id="linea2" layoutX="-2.0" layoutY="195.0" prefHeight="7.0" prefWidth="872.0" />
