--- a/src/main/java/com/verona/view/cargarVentas.fxml
+++ b/src/main/java/com/verona/view/cargarVentas.fxml
@@ -7,11 +7,13 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="636.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.CargarVentasController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="704.0" prefWidth="636.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.CargarVentasController">
    <children>
         <Label layoutX="25.0" layoutY="138.0" text="Descripcion del Trabajo:">
             <font>
@@ -39,32 +41,35 @@
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <Label layoutX="132.0" layoutY="397.0" text="Importe Total del Trabajo:">
+        <Label layoutX="142.0" layoutY="403.0" text="Importe Total del Trabajo:">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="importeTextField" layoutX="332.0" layoutY="392.0" prefHeight="26.0" prefWidth="209.0" />
+        <TextField fx:id="importeTextField" layoutX="307.0" layoutY="385.0" prefHeight="54.0" prefWidth="233.0">
+         <font>
+            <Font size="21.0" />
+         </font></TextField>
         <Label layoutX="26.0" layoutY="103.0" text="Nombre del Cliente:">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
         <TextField fx:id="nombreClienteTextField" layoutX="139.0" layoutY="99.0" />
-        <Label layoutX="213.0" layoutY="442.0" text="Telefono:">
+        <Label layoutX="213.0" layoutY="483.0" text="Telefono:">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="telefonoTextField" layoutX="332.0" layoutY="437.0" prefHeight="26.0" prefWidth="209.0" />
-        <Label layoutX="159.0" layoutY="486.0" text="Telefono Secundario: ">
+        <TextField fx:id="telefonoTextField" layoutX="332.0" layoutY="478.0" prefHeight="26.0" prefWidth="209.0" />
+        <Label layoutX="159.0" layoutY="529.0" text="Telefono Secundario: ">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="telefonoSecundarioTextField" layoutX="332.0" layoutY="481.0" prefHeight="26.0" prefWidth="209.0" />
-        <TextField fx:id="emailTextField" layoutX="332.0" layoutY="527.0" prefHeight="26.0" prefWidth="209.0" />
-        <Label layoutX="222.0" layoutY="532.0" text="Email:">
+        <TextField fx:id="telefonoSecundarioTextField" layoutX="332.0" layoutY="524.0" prefHeight="26.0" prefWidth="209.0" />
+        <TextField fx:id="emailTextField" layoutX="332.0" layoutY="567.0" prefHeight="26.0" prefWidth="209.0" />
+        <Label layoutX="222.0" layoutY="572.0" text="Email:">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
@@ -77,11 +82,33 @@
                 <Glow level="0.34" />
             </effect>
         </Label>
-        <Button fx:id="btnCargarVenta" layoutX="284.0" layoutY="575.0" mnemonicParsing="false" onAction="#btnCargarVentaClicked" style="-fx-background-color: FFAA00;" text="Cargar Venta" />
-        <Label fx:id="msjErrorLogro" layoutX="44.0" layoutY="601.0" prefHeight="17.0" prefWidth="549.0" />
-        <Button fx:id="btnVolver" layoutX="302.0" layoutY="636.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: ffaa00;" text="Volver" />
+        <Button fx:id="btnCargarVenta" layoutX="283.0" layoutY="615.0" mnemonicParsing="false" onAction="#btnCargarVentaClicked" style="-fx-background-color: FFAA00;" text="Cargar Venta">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect>
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font></Button>
+        <Button fx:id="btnVolver" layoutX="303.0" layoutY="664.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect></Button>
       <Label fx:id="precioColocacionLabel" layoutX="344.0" layoutY="138.0" text="Precio de Colocacion:" />
       <TextField fx:id="precioColocacionTextField" layoutX="472.0" layoutY="134.0" prefHeight="26.0" prefWidth="150.0" />
-      <Label fx:id="alertLabel" alignment="CENTER" layoutX="97.0" layoutY="610.0" prefHeight="17.0" prefWidth="462.0" />
+      <Label fx:id="labelAclaracion" layoutX="216.0" layoutY="447.0" text="(Ingrese el importe total sin '$', '.' ni ',' y sin espacios)">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font></Label>
     </children>
 </AnchorPane>
