--- a/src/main/java/com/verona/view/dashboardSeller.fxml
+++ b/src/main/java/com/verona/view/dashboardSeller.fxml
@@ -7,7 +7,9 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="655.0" prefWidth="1279.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
@@ -16,7 +18,10 @@
       <Label fx:id="fechaLabel" layoutX="68.0" layoutY="85.0" prefHeight="17.0" prefWidth="111.0" />
       <ButtonBar layoutX="-6.0" prefHeight="49.0" prefWidth="1310.0">
          <buttons>
-            <Button fx:id="btnBachas" mnemonicParsing="false" onAction="#btnBachasClicked" style="-fx-background-color: ffaa00;" text="Bachas" />
+            <Button fx:id="btnBachas" mnemonicParsing="false" onAction="#btnBachasClicked" style="-fx-background-color: ffaa00;" text="Bachas">
+               <font>
+                  <Font name="Arial" size="13.0" />
+               </font></Button>
             <Button fx:id="btnPedidos" minWidth="48.0" mnemonicParsing="false" onAction="#btnPedidosClicked" prefHeight="26.0" style="-fx-background-color: ffaa00;" text="Pedidos" />
             <MenuButton fx:id="btnVentasMenu" mnemonicParsing="false" style="-fx-background-color: FFAA00;" text="Ventas">
               <items>
@@ -27,7 +32,17 @@
               </items>
             </MenuButton>
             <Button fx:id="btnCaja" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCajaClicked" style="-fx-background-color: FFAA00;" text="Registrar Entrada de Dinero" />
-            <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#btnCerrarSesionClicked" prefHeight="26.0" prefWidth="495.0" style="-fx-background-color: Grey;" text="Cerrar Sesion" textFill="WHITE" />
+            <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#btnCerrarSesionClicked" prefHeight="26.0" prefWidth="495.0" style="-fx-background-color: Black;" text="Cerrar Sesion" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="13.0" />
+               </font>
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color opacity="0.6000000238418579" />
+                     </color>
+                  </DropShadow>
+               </effect></Button>
          </buttons>
       </ButtonBar>
       <Label layoutX="14.0" layoutY="146.0" text="Ultima Cotizacion Dolar BLUE:">
@@ -36,7 +51,14 @@
          </font>
       </Label>
       <Label fx:id="cotizacionDolarBlue" layoutX="60.0" layoutY="174.0" prefHeight="17.0" prefWidth="89.0" textFill="#007c46" />
-      <Button fx:id="BtnCotizaciones" layoutX="186.0" layoutY="142.0" mnemonicParsing="false" onAction="#BtnCotizacionesClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cotizacion" />
+      <Button fx:id="BtnCotizaciones" layoutX="186.0" layoutY="142.0" mnemonicParsing="false" onAction="#BtnCotizacionesClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cotizacion">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect></Button>
       <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="1301.0" />
       <Separator layoutX="-3.0" layoutY="121.0" prefHeight="10.0" prefWidth="1301.0" />
       <TableView fx:id="tablaVentasResumen" prefHeight="400.0" prefWidth="1304.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="250.0" />
@@ -44,7 +66,29 @@
       <Separator layoutX="323.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="11.0" />
       <TableView fx:id="bachasTablaPreview" layoutX="711.0" layoutY="125.0" prefHeight="124.0" prefWidth="592.0" />
       <Separator layoutX="708.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="0.0" />
-      <Label layoutX="453.0" layoutY="134.0" text="Mensajes del Dia:" />
-      <Label fx:id="msjDelDia" layoutX="329.0" layoutY="163.0" prefHeight="82.0" prefWidth="380.0" wrapText="true" />
+      <Button fx:id="btnVerIngresosConCredito" layoutX="796.0" layoutY="73.0" mnemonicParsing="false" onAction="#btnVerIngresosConCreditoClicked" style="-fx-background-color: Black;" text="Verificar Ingresos con Tarjeta Credito" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect>
+      </Button>
+      <Button fx:id="btnRealizarPresupuesto" layoutX="434.0" layoutY="142.0" mnemonicParsing="false" onAction="#btnRealizarPresupuestoClicked" style="-fx-background-color: Black;" text="Realizar Presupuesto" textFill="WHITE">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect>
+      </Button>
    </children>
 </AnchorPane>
