--- a/src/main/java/com/verona/view/managerDashboard.fxml
+++ b/src/main/java/com/verona/view/managerDashboard.fxml
@@ -129,8 +129,8 @@
             </DropShadow>
          </effect>
       </Label>
-      <Label fx:id="valorDolarBlueLabel" layoutX="537.0" layoutY="142.0" prefHeight="17.0" prefWidth="111.0" />
-      <Label fx:id="fechaUltimaDolarLabel" layoutX="512.0" layoutY="167.0" prefHeight="17.0" prefWidth="162.0" />
+      <Label fx:id="valorDolarBlueLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="537.0" layoutY="142.0" prefHeight="17.0" prefWidth="111.0" />
+      <Label fx:id="fechaUltimaDolarLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="512.0" layoutY="167.0" prefHeight="17.0" prefWidth="162.0" />
       <Button fx:id="btnActualizarCotizacionDolarBlue" layoutX="527.0" layoutY="197.0" mnemonicParsing="false" onAction="#btnActualizarCotizacionDolarBlueClicked" style="-fx-background-color: ffaa00;" text="Actualizar Cotizacion">
          <effect>
             <DropShadow>
@@ -161,5 +161,17 @@
       </Separator>
       <Label fx:id="entradasDiaLabel" layoutX="585.0" layoutY="285.0" prefHeight="17.0" prefWidth="126.0" />
       <Label fx:id="salidasDiaLabel" layoutX="578.0" layoutY="322.0" prefHeight="17.0" prefWidth="126.0" />
+      <Button fx:id="btnActualizarPrecios" layoutX="528.0" layoutY="377.0" mnemonicParsing="false" onAction="#btnActualizarPreciosClicked" style="-fx-background-color: Black;" text="Actualizar Precios" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect>
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
