--- a/src/main/java/com/verona/view/dashboardSeller.fxml
+++ b/src/main/java/com/verona/view/dashboardSeller.fxml
@@ -12,10 +12,12 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="655.0" prefWidth="1279.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
    <children>
-      <Label layoutX="14.0" layoutY="85.0" text="Fecha:" />
+      <Label layoutX="14.0" layoutY="85.0" text="Fecha:">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font></Label>
       <Label fx:id="fechaLabel" layoutX="68.0" layoutY="85.0" prefHeight="17.0" prefWidth="111.0" />
       <ButtonBar layoutX="-6.0" prefHeight="49.0" prefWidth="1310.0">
          <buttons>
@@ -46,24 +48,18 @@
                </effect></Button>
          </buttons>
       </ButtonBar>
-      <Label layoutX="14.0" layoutY="146.0" text="Ultima Cotizacion Dolar BLUE:">
+      <Label layoutX="40.0" layoutY="147.0" text="Dolar BNA">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <Label fx:id="cotizacionDolarBlue" layoutX="60.0" layoutY="174.0" prefHeight="17.0" prefWidth="89.0" textFill="#007c46" />
-      <Button fx:id="BtnCotizaciones" layoutX="186.0" layoutY="142.0" mnemonicParsing="false" onAction="#BtnCotizacionesClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cotizacion">
-         <effect>
-            <DropShadow>
-               <color>
-                  <Color opacity="0.6000000238418579" />
-               </color>
-            </DropShadow>
-         </effect></Button>
+      <Label fx:id="dolarOficialLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="17.0" layoutY="187.0" prefHeight="17.0" prefWidth="111.0" textAlignment="CENTER" textFill="#0084ff">
+         <font>
+            <Font name="Arial Bold" size="28.0" />
+         </font></Label>
       <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="1301.0" />
       <Separator layoutX="-3.0" layoutY="121.0" prefHeight="10.0" prefWidth="1301.0" />
       <TableView fx:id="tablaVentasResumen" prefHeight="400.0" prefWidth="1304.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="250.0" />
-      <Label fx:id="fechaUltimaBlue" layoutX="14.0" layoutY="208.0" prefHeight="17.0" prefWidth="248.0" />
       <Separator layoutX="323.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="11.0" />
       <TableView fx:id="bachasTablaPreview" layoutX="711.0" layoutY="125.0" prefHeight="124.0" prefWidth="592.0" />
       <Separator layoutX="708.0" layoutY="125.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="0.0" />
@@ -91,5 +87,15 @@
             </DropShadow>
          </effect>
       </Button>
+      <Separator layoutX="154.0" layoutY="126.0" orientation="VERTICAL" prefHeight="124.0" prefWidth="6.0" />
+      <Label layoutX="203.0" layoutY="147.0" text="Dolar Blue">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="dolarBlueLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="185.0" layoutY="187.0" prefHeight="17.0" prefWidth="102.0" textAlignment="CENTER" textFill="#379e00">
+         <font>
+            <Font name="Arial Bold" size="28.0" />
+         </font></Label>
    </children>
 </AnchorPane>
