--- a/src/main/java/com/verona/view/managerDashboard.fxml
+++ b/src/main/java/com/verona/view/managerDashboard.fxml
@@ -117,7 +117,7 @@
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font></Button>
-      <Label layoutX="501.0" layoutY="101.0" text="Cotizacion Dolar Blue">
+      <Label layoutX="439.0" layoutY="110.0" text="Dolar BNA" textFill="#0084ff">
          <font>
             <Font name="Arial Bold" size="19.0" />
          </font>
@@ -129,17 +129,10 @@
             </DropShadow>
          </effect>
       </Label>
-      <Label fx:id="valorDolarBlueLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="537.0" layoutY="142.0" prefHeight="17.0" prefWidth="111.0" />
-      <Label fx:id="fechaUltimaDolarLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="512.0" layoutY="167.0" prefHeight="17.0" prefWidth="162.0" />
-      <Button fx:id="btnActualizarCotizacionDolarBlue" layoutX="527.0" layoutY="197.0" mnemonicParsing="false" onAction="#btnActualizarCotizacionDolarBlueClicked" style="-fx-background-color: ffaa00;" text="Actualizar Cotizacion">
-         <effect>
-            <DropShadow>
-               <color>
-                  <Color opacity="0.4455066919326782" />
-               </color>
-            </DropShadow>
-         </effect>
-      </Button>
+      <Label fx:id="dolarOficialLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="412.0" layoutY="150.0" prefHeight="17.0" prefWidth="150.0" textAlignment="CENTER">
+         <font>
+            <Font name="Arial Bold" size="28.0" />
+         </font></Label>
       <Label layoutX="413.0" layoutY="285.0" text="Total de Entradas del Dia:">
          <font>
             <Font name="Arial Bold" size="13.0" />
@@ -173,5 +166,23 @@
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Button>
+      <Separator layoutX="596.0" layoutY="89.0" orientation="VERTICAL" prefHeight="171.0" prefWidth="0.0" />
+      <Label layoutX="648.0" layoutY="110.0" text="Dolar Blue" textFill="#06b900">
+         <font>
+            <Font name="Arial Bold" size="19.0" />
+         </font>
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.4099999964237213" />
+               </color>
+            </DropShadow>
+         </effect>
+      </Label>
+      <Label fx:id="dolarBlueLabelToComplete" alignment="CENTER" contentDisplay="CENTER" layoutX="633.0" layoutY="150.0" prefHeight="32.0" prefWidth="126.0" textAlignment="CENTER">
+         <font>
+            <Font name="Arial Bold" size="28.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
