--- a/src/main/java/com/verona/view/cargarPlano.fxml
+++ b/src/main/java/com/verona/view/cargarPlano.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -21,7 +21,7 @@
          </effect>
       </Label>
       <Label layoutX="49.0" layoutY="105.0" text="Ingrese ID VENTA que pertenece el plano:" />
-      <TextField fx:id="idTextField" layoutX="316.0" layoutY="100.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="idTextField" layoutX="283.0" layoutY="101.0" prefHeight="26.0" prefWidth="184.0" promptText="Ingresar ID VENTA" />
       <Button fx:id="btnVolver" layoutX="276.0" layoutY="463.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="13.0" />
@@ -34,17 +34,10 @@
             </DropShadow>
          </effect></Button>
       <Label fx:id="firstAlert" alignment="CENTER" layoutX="-2.0" layoutY="294.0" prefHeight="17.0" prefWidth="602.0" />
-      <Button fx:id="btnSeleccionarArchivo" layoutX="316.0" layoutY="250.0" mnemonicParsing="false" onAction="#btnSeleccionarArchivoClicked" prefHeight="26.0" prefWidth="150.0" text="Seleccionar Archivo">
+      <Button fx:id="btnSeleccionarArchivo" layoutX="283.0" layoutY="251.0" mnemonicParsing="false" onAction="#btnSeleccionarArchivoClicked" prefHeight="26.0" prefWidth="184.0" text="Seleccionar Archivo">
          <font>
             <Font name="Arial Bold" size="13.0" />
-         </font>
-         <effect>
-            <DropShadow>
-               <color>
-                  <Color opacity="0.6000000238418579" />
-               </color>
-            </DropShadow>
-         </effect></Button>
+         </font></Button>
       <Label fx:id="labelIndicator" layoutX="144.0" layoutY="255.0" text="Cargue la foto del Plano:" />
       <Button fx:id="btnCargar" layoutX="275.0" layoutY="347.0" mnemonicParsing="false" onAction="#btnCargarClicked" style="-fx-background-color: FFAA00;" text="Cargar">
          <effect>
@@ -59,7 +52,9 @@
          </font></Button>
       <Label layoutX="185.0" layoutY="156.0" text="Ingrese Material:" />
       <Label layoutX="194.0" layoutY="207.0" text="Ingrese color:" />
-      <ComboBox fx:id="materialComboBox" layoutX="316.0" layoutY="151.0" onAction="#materialComboBoxChanged" prefHeight="26.0" prefWidth="150.0" />
-      <ComboBox fx:id="colorCombobox" layoutX="316.0" layoutY="202.0" prefWidth="150.0" />
+      <TextField fx:id="materialTextFieldToComplete" layoutX="283.0" layoutY="152.0" prefHeight="26.0" prefWidth="184.0" promptText="Ingrese el o los materiales" />
+      <TextField fx:id="colorTextFieldToComplete" layoutX="283.0" layoutY="203.0" prefHeight="26.0" prefWidth="184.0" promptText="Ingrese el o los Colores" />
+      <DatePicker fx:id="dateFechaTerminacion" layoutX="283.0" layoutY="298.0" />
+      <Label layoutX="152.0" layoutY="303.0" text="Fecha de Terminacion:" />
    </children>
 </AnchorPane>
