--- a/src/main/java/com/verona/view/realizarPresupuesto.fxml
+++ b/src/main/java/com/verona/view/realizarPresupuesto.fxml
@@ -2,14 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.RealizarPresupuestoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="943.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.RealizarPresupuestoController">
    <children>
-      <Button fx:id="btnVolver" layoutX="273.0" layoutY="349.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
+      <Button fx:id="btnVolver" layoutX="443.0" layoutY="586.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
@@ -20,6 +22,46 @@
                </color>
             </DropShadow>
          </effect></Button>
-      <Label fx:id="dolarOficialLabel" layoutX="133.0" layoutY="65.0" prefHeight="17.0" prefWidth="338.0" />
+      <Label layoutX="298.0" layoutY="14.0" text="Nuevo Presupuesto">
+         <font>
+            <Font name="Arial Bold" size="37.0" />
+         </font>
+      </Label>
+      <Label layoutX="60.0" layoutY="96.0" text="Cliente:">
+         <font>
+            <Font name="Arial Bold" size="19.0" />
+         </font>
+      </Label>
+      <TextField fx:id="nombreClienteTextFieldToComplete" layoutX="136.0" layoutY="90.0" prefHeight="35.0" prefWidth="283.0" promptText="Ingrese nombre del cliente">
+         <font>
+            <Font name="Arial" size="19.0" />
+         </font>
+      </TextField>
+      <TableView fx:id="coloresTable" layoutX="60.0" layoutY="200.0" prefHeight="200.0" prefWidth="363.0" />
+      <Label layoutX="60.0" layoutY="161.0" text="Indique los colores a presupuestar:">
+         <font>
+            <Font name="Arial Bold" size="19.0" />
+         </font>
+      </Label>
+      <Label layoutX="60.0" layoutY="434.0" text="Metros Cuadrados Totales:">
+         <font>
+            <Font name="Arial Bold" size="19.0" />
+         </font>
+      </Label>
+      <TextField fx:id="m2TextFieldToComplete" layoutX="309.0" layoutY="427.0" prefHeight="35.0" prefWidth="114.0" promptText="M2">
+         <font>
+            <Font name="Arial" size="19.0" />
+         </font>
+      </TextField>
+      <Label layoutX="57.0" layoutY="492.0" text="Metros Lineales Totales:">
+         <font>
+            <Font name="Arial Bold" size="19.0" />
+         </font>
+      </Label>
+      <TextField layoutX="284.0" layoutY="486.0" prefHeight="35.0" prefWidth="139.0" promptText="ML Totales">
+         <font>
+            <Font name="Arial" size="19.0" />
+         </font>
+      </TextField>
    </children>
 </AnchorPane>
