--- a/src/main/java/com/verona/view/verVentasDeSucursal.fxml
+++ b/src/main/java/com/verona/view/verVentasDeSucursal.fxml
@@ -64,7 +64,7 @@
       </DatePicker>
       <Label layoutX="296.0" layoutY="65.0" text="Desde:" />
       <Label layoutX="296.0" layoutY="107.0" prefHeight="17.0" prefWidth="39.0" text="Hasta:" />
-      <Button fx:id="btnCargarFiltradas" layoutX="372.0" layoutY="156.0" mnemonicParsing="false" style="-fx-background-color: FFAA00;" text="Cargar">
+      <Button fx:id="btnCargarFiltradas" layoutX="372.0" layoutY="156.0" mnemonicParsing="false" onAction="#btnCargarFiltradasClicked" style="-fx-background-color: FFAA00;" text="Cargar">
          <effect>
             <DropShadow>
                <color>
