Start developing kitchen sink allocation to each blueprint for subsequent stock management and automation.

--- a/src/main/java/com/verona/view/verProduccion.fxml
+++ b/src/main/java/com/verona/view/verProduccion.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="548.0" prefWidth="752.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.VerProduccionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="635.0" prefWidth="833.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.VerProduccionController">
    <children>
-      <Button fx:id="btnVolver" layoutX="325.0" layoutY="509.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
+      <Button fx:id="btnVolver" layoutX="388.0" layoutY="602.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
@@ -22,20 +22,20 @@
                </color>
             </DropShadow>
          </effect></Button>
-      <TableView fx:id="tablaPlanosProduccion" layoutX="-1.0" layoutY="78.0" prefHeight="411.0" prefWidth="752.0">
+      <TableView fx:id="tablaPlanosProduccion" layoutY="53.0" prefHeight="535.0" prefWidth="833.0">
         <columns>
           <TableColumn fx:id="colCodigoPlano" prefWidth="103.0" text="Codigo de Plano" />
           <TableColumn fx:id="colMaterial" prefWidth="57.0" text="Material" />
           <TableColumn fx:id="colColor" prefWidth="103.0" text="Color" />
           <TableColumn fx:id="colEstado" prefWidth="99.0" text="Estado" />
-          <TableColumn fx:id="colVentasID" prefWidth="77.0" text="ID de venta" />
-          <TableColumn fx:id="colImagen" prefWidth="89.0" text="Imagenes" />
-          <TableColumn fx:id="colFechaTerminacion" prefWidth="146.0" text="Fecha de Terminacion" />
+          <TableColumn fx:id="colVentasID" prefWidth="115.0" text="ID de venta" />
+          <TableColumn fx:id="colImagen" prefWidth="155.0" text="Imagenes" />
+          <TableColumn fx:id="colFechaTerminacion" prefWidth="200.0" text="Fecha de Terminacion" />
         </columns>
       </TableView>
-      <ButtonBar layoutX="2.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="53.0" prefWidth="760.0">
+      <ButtonBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="53.0" prefWidth="833.0">
         <buttons>
-            <Button fx:id="btnBorrarPlano" mnemonicParsing="false" onAction="#btnBorrarPlanoClicked" style="-fx-background-color: FFAA00;" text="Borrar Plano">
+            <Button fx:id="btnBorrarPlano" mnemonicParsing="false" onAction="#btnBorrarPlanoClicked" prefHeight="25.0" style="-fx-background-color: FFAA00;" text="Borrar Plano">
                <font>
                   <Font name="Arial Bold" size="13.0" />
                </font>
@@ -49,9 +49,9 @@
                <effect>
                   <DropShadow />
                </effect></Button>
-            <Button fx:id="btnCambiarEstadoPlano" mnemonicParsing="false" onAction="#btnCambiarEstadoPlanoClicked" prefHeight="25.0" style="-fx-background-color: FFAA00;" text="Cambiar Estado de Plano">
+            <Button fx:id="btnCambiarEstadoPlano" mnemonicParsing="false" onAction="#btnCambiarEstadoPlanoClicked" prefHeight="25.0" style="-fx-background-color: FFAA00;" text="Cambiar Estado Plano">
                <font>
-                  <Font name="Arial Bold" size="13.0" />
+                  <Font name="Arial Bold" size="12.0" />
                </font>
                <effect>
                   <DropShadow />
@@ -64,6 +64,14 @@
                <effect>
                   <DropShadow />
                </effect></Button>
+            <Button fx:id="btnAsignarBachas" mnemonicParsing="false" onAction="#btnAsignarBachasClicked" style="-fx-background-color: FFAA00;" text="Asignar Bachas a Plano">
+               <font>
+                  <Font name="Arial Bold" size="12.0" />
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </Button>
         </buttons>
       </ButtonBar>
    </children>
