--- a/src/main/java/com/verona/view/dashboardSeller.fxml
+++ b/src/main/java/com/verona/view/dashboardSeller.fxml
@@ -11,19 +11,22 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="197.0" prefWidth="747.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
+<AnchorPane prefHeight="253.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
    <children>
-      <Label layoutX="507.0" layoutY="69.0" text="Fecha:">
+      <Label layoutX="450.0" layoutY="69.0" prefWidth="52.0" text="Fecha:">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font></Label>
-      <Label fx:id="fechaLabel" layoutX="557.0" layoutY="68.0" prefHeight="17.0" prefWidth="111.0" />
-      <ButtonBar layoutX="-6.0" layoutY="5.0" prefHeight="44.0" prefWidth="753.0">
+      <Label fx:id="fechaLabel" layoutX="509.0" layoutY="69.0" prefHeight="17.0" prefWidth="111.0" />
+      <ButtonBar layoutX="-6.0" layoutY="5.0" prefHeight="44.0" prefWidth="820.0">
          <buttons>
             <Button fx:id="btnBachas" mnemonicParsing="false" onAction="#btnBachasClicked" style="-fx-background-color: ffaa00;" text="Bachas">
                <font>
                   <Font name="Arial Bold" size="13.0" />
-               </font></Button>
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Button>
             <MenuButton fx:id="btnVentasMenu" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" style="-fx-background-color: FFAA00;" text="Ventas" textAlignment="CENTER">
               <items>
                 <MenuItem fx:id="btnVentas" mnemonicParsing="false" onAction="#btnVentasClicked" text="Crear Venta" />
@@ -34,11 +37,17 @@
                <font>
                   <Font name="Arial Bold" size="13.0" />
                </font>
+               <effect>
+                  <DropShadow />
+               </effect>
             </MenuButton>
             <Button fx:id="btnCaja" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCajaClicked" style="-fx-background-color: FFAA00;" text="Registrar Entrada de Dinero">
                <font>
                   <Font name="Arial Bold" size="13.0" />
-               </font></Button>
+               </font>
+               <effect>
+                  <DropShadow />
+               </effect></Button>
             <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#btnCerrarSesionClicked" prefHeight="26.0" prefWidth="495.0" style="-fx-background-color: Black;" text="Cerrar Sesion" textFill="WHITE">
                <font>
                   <Font name="Arial Bold" size="13.0" />
@@ -61,9 +70,9 @@
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font></Label>
-      <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="763.0" />
-      <Separator layoutX="376.0" layoutY="57.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
-      <Separator layoutX="757.0" layoutY="57.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="0.0" />
+      <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="818.0" />
+      <Separator layoutX="409.0" layoutY="59.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
+      <Separator layoutX="817.0" layoutY="57.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
       <Button fx:id="btnVerIngresosConCredito" layoutX="432.0" layoutY="98.0" mnemonicParsing="false" onAction="#btnVerIngresosConCreditoClicked" style="-fx-background-color: Black;" text="Verificar Ingresos con Tarjeta Credito" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="13.0" />
@@ -86,10 +95,36 @@
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font></Label>
-      <Separator layoutX="-1.0" layoutY="135.0" prefHeight="4.0" prefWidth="763.0" />
-      <Separator layoutX="1.0" layoutY="193.0" prefHeight="4.0" prefWidth="753.0" />
-      <Button fx:id="btnVerPrecioBachas" layoutX="23.0" layoutY="153.0" mnemonicParsing="false" onAction="#btnVerPrecioBachasClicked" text="Ver Precio de Bachas" />
-      <Button fx:id="btnVerPrecioManoObra" layoutX="210.0" layoutY="153.0" mnemonicParsing="false" onAction="#btnVerPrecioManoObraClicked" text="Ver Precio mano de Obra" />
-      <Button fx:id="btnVerPrecioMateriales" layoutX="404.0" layoutY="153.0" mnemonicParsing="false" onAction="#btnVerPrecioMaterialesClicked" text="Ver Precio Materiales" />
+      <Separator layoutX="-1.0" layoutY="135.0" prefHeight="4.0" prefWidth="818.0" />
+      <Separator layoutX="1.0" layoutY="193.0" prefHeight="4.0" prefWidth="818.0" />
+      <Button fx:id="btnVerPrecioBachas" layoutX="16.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioBachasClicked" style="-fx-background-color: FFAA00;" text="Precio Bachas">
+         <font>
+            <Font name="Arial Bold" size="18.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <Button fx:id="btnVerPrecioManoObra" layoutX="437.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioManoObraClicked" style="-fx-background-color: FFAA00;" text="Precio mano de Obra">
+         <font>
+            <Font name="Arial Bold" size="18.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <Button fx:id="btnVerPrecioMateriales" layoutX="209.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioMaterialesClicked" style="-fx-background-color: FFAA00;" text="Precio Materiales">
+         <font>
+            <Font name="Arial Bold" size="18.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect></Button>
+      <Button fx:id="btnPrecioDeRegruesos" layoutX="313.0" layoutY="206.0" mnemonicParsing="false" onAction="#btnPrecioDeRegruesosClicked" style="-fx-background-color: FFAA00;" text="Precio de Regruesos">
+         <font>
+            <Font name="Arial Bold" size="18.0" />
+         </font>
+         <effect>
+            <DropShadow />
+         </effect>
+      </Button>
    </children>
 </AnchorPane>
