--- a/src/main/java/com/verona/view/negocio.fxml
+++ b/src/main/java/com/verona/view/negocio.fxml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.NegocioController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="436.0" prefWidth="807.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.NegocioController">
    <children>
-      <Button fx:id="btnVolver" layoutX="322.0" layoutY="517.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: black;" text="Volver" textFill="WHITE">
+      <Button fx:id="btnVolver" layoutX="376.0" layoutY="398.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: black;" text="Volver" textFill="WHITE">
          <effect>
             <DropShadow>
                <color>
@@ -26,49 +24,43 @@
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font></Button>
-      <Button fx:id="btnEstadisticasIngresos" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnCargarEstadisticasIngresosClicked" style="-fx-background-color: FFAA00;" text="Estadisticas de Ingresos">
+      <Separator layoutX="405.0" layoutY="53.0" orientation="VERTICAL" prefHeight="283.0" prefWidth="3.0" />
+      <Separator layoutX="7.0" layoutY="49.0" prefHeight="13.0" prefWidth="801.0" />
+      <Separator layoutX="3.0" layoutY="331.0" prefHeight="13.0" prefWidth="801.0" />
+      <Label layoutX="224.0" layoutY="14.0" text="Estadisticas de la Sucursal">
+         <font>
+            <Font name="Arial Bold" size="27.0" />
+         </font>
          <effect>
             <DropShadow>
                <color>
-                  <Color opacity="0.6000000238418579" />
+                  <Color opacity="0.4482758641242981" />
                </color>
             </DropShadow>
-         </effect></Button>
-      <Button fx:id="btnEstadisticasSalidas" layoutX="546.0" layoutY="14.0" mnemonicParsing="false" onAction="#btnCargarEstadisticasSalidasClicked" style="-fx-background-color: FFAA00;" text="Estadisticas de Salidas">
-         <effect>
-            <DropShadow>
-               <color>
-                  <Color opacity="0.6000000238418579" />
-               </color>
-            </DropShadow>
-         </effect></Button>
-      <HBox fx:id="legendContainer" spacing="10" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-      <Separator layoutX="348.0" layoutY="55.0" orientation="VERTICAL" prefHeight="446.0" prefWidth="6.0" />
-      <Separator layoutX="7.0" layoutY="49.0" prefHeight="13.0" prefWidth="695.0" />
-      <Separator layoutX="3.0" layoutY="287.0" prefHeight="1.0" prefWidth="344.0" />
-      <LineChart fx:id="graphDineroPorVenta" layoutX="-2.0" layoutY="81.0" prefHeight="158.0" prefWidth="354.0">
+         </effect>
+      </Label>
+      <BarChart fx:id="graphGananciasNetas" layoutY="56.0" prefHeight="283.0" prefWidth="404.0" title="Ganancias Netas por Mes">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
         <yAxis>
           <NumberAxis side="LEFT" />
         </yAxis>
-      </LineChart>
-      <Separator layoutX="5.0" layoutY="499.0" prefHeight="3.0" prefWidth="344.0" />
-      <Label layoutX="380.0" layoutY="94.0" text="Fecha Inicio:" />
-      <DatePicker fx:id="fechaInicioPicker" layoutX="465.0" layoutY="90.0" />
-      <Label layoutX="378.0" layoutY="138.0" text="Fecha Cierre:" />
-      <DatePicker fx:id="fechaCierrePicker" layoutX="465.0" layoutY="134.0" />
-      <Button fx:id="btnCargarEstadisticas" layoutX="476.0" layoutY="172.0" mnemonicParsing="false" onAction="#btnCargarEstadisticasClicked" style="-fx-background-color: FFaa00;" text="Cargar Estadisticas">
+      </BarChart>
+      <BarChart fx:id="graphGastosXMes" layoutX="405.0" layoutY="56.0" prefHeight="283.0" prefWidth="378.0" title="Gastos Totales Por Mes">
+         <xAxis>
+            <CategoryAxis side="BOTTOM" />
+         </xAxis>
+         <yAxis>
+            <NumberAxis side="LEFT" />
+         </yAxis>
+      </BarChart>
+      <Button fx:id="btnMasAnalisisDeGastos" layoutX="520.0" layoutY="360.0" mnemonicParsing="false" onAction="#btnMasAnalisisDeGastosClicked" style="-fx-background-color: FFAA00;" text="Ver Mas analisis de Gastos">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
          <effect>
-            <DropShadow>
-               <color>
-                  <Color opacity="0.6015325784683228" />
-               </color>
-            </DropShadow>
+            <DropShadow />
          </effect>
       </Button>
    </children>
