--- a/src/main/java/com/verona/view/bachas.fxml
+++ b/src/main/java/com/verona/view/bachas.fxml
@@ -11,14 +11,14 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="593.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.BachasController">
    <children>
       <TableView fx:id="tablaBachasStock" layoutX="23.0" layoutY="149.0" prefHeight="353.0" prefWidth="467.0" />
-      <Button fx:id="btnIngresarBachas" layoutX="352.0" layoutY="26.0" mnemonicParsing="false" onAction="#btnIngresarBachasClicked" style="-fx-background-color: FFAA00;" text="Ingresar Bachas">
+      <Button fx:id="btnIngresarBachas" layoutX="352.0" layoutY="26.0" mnemonicParsing="false" onAction="#btnIngresarBachasClicked" style="-fx-background-color: FFAA00;" text="Ingresar Bachas" AnchorPane.leftAnchor="352.0" AnchorPane.rightAnchor="351.0">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
          <effect>
             <DropShadow />
          </effect></Button>
-      <Button fx:id="btnVolver" layoutX="377.0" layoutY="545.0" mnemonicParsing="false" onAction="#btnVolverClicked" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: Black;" text="Volver" textFill="WHITE">
+      <Button fx:id="btnVolver" layoutX="377.0" layoutY="545.0" mnemonicParsing="false" onAction="#btnVolverClicked" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: Black;" text="Volver" textFill="WHITE" AnchorPane.leftAnchor="377.0" AnchorPane.rightAnchor="376.0">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
