--- a/src/main/java/com/verona/view/dashboardSeller.fxml
+++ b/src/main/java/com/verona/view/dashboardSeller.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="253.0" prefWidth="823.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
+<AnchorPane prefHeight="253.0" prefWidth="834.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.seller.DashboardSellerController">
    <children>
-      <Label layoutX="450.0" layoutY="69.0" prefWidth="52.0" text="Fecha:">
+      <Label layoutX="450.0" layoutY="69.0" prefWidth="52.0" text="Fecha:" AnchorPane.leftAnchor="450.0" AnchorPane.rightAnchor="321.0">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font></Label>
-      <Label fx:id="fechaLabel" layoutX="509.0" layoutY="69.0" prefHeight="17.0" prefWidth="111.0" />
-      <ButtonBar layoutX="-6.0" layoutY="5.0" prefHeight="44.0" prefWidth="820.0">
+      <Label fx:id="fechaLabel" layoutX="509.0" layoutY="69.0" prefHeight="17.0" prefWidth="111.0" AnchorPane.leftAnchor="509.0" />
+      <ButtonBar layoutX="-6.0" layoutY="5.0" prefHeight="44.0" prefWidth="834.0" AnchorPane.leftAnchor="-6.0" AnchorPane.rightAnchor="6.0">
          <buttons>
             <Button fx:id="btnBachas" mnemonicParsing="false" onAction="#btnBachasClicked" style="-fx-background-color: ffaa00;" text="Bachas">
                <font>
@@ -70,10 +70,8 @@
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font></Label>
-      <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="818.0" />
-      <Separator layoutX="409.0" layoutY="59.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
-      <Separator layoutX="817.0" layoutY="57.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
-      <Button fx:id="btnVerIngresosConCredito" layoutX="432.0" layoutY="98.0" mnemonicParsing="false" onAction="#btnVerIngresosConCreditoClicked" style="-fx-background-color: Black;" text="Verificar Ingresos con Tarjeta Credito" textFill="WHITE">
+      <Separator layoutX="-1.0" layoutY="50.0" prefHeight="17.0" prefWidth="818.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="6.0" />
+      <Button fx:id="btnVerIngresosConCredito" layoutX="432.0" layoutY="98.0" mnemonicParsing="false" onAction="#btnVerIngresosConCreditoClicked" style="-fx-background-color: Black;" text="Verificar Ingresos con Tarjeta Credito" textFill="WHITE" AnchorPane.leftAnchor="432.0">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
@@ -85,7 +83,6 @@
             </DropShadow>
          </effect>
       </Button>
-      <Separator layoutX="183.0" layoutY="59.0" orientation="VERTICAL" prefHeight="137.0" prefWidth="6.0" />
       <Label layoutX="254.0" layoutY="69.0" text="Dolar Blue">
          <font>
             <Font name="Arial Bold" size="13.0" />
@@ -95,23 +92,22 @@
          <font>
             <Font name="Arial Bold" size="28.0" />
          </font></Label>
-      <Separator layoutX="-1.0" layoutY="135.0" prefHeight="4.0" prefWidth="818.0" />
-      <Separator layoutX="1.0" layoutY="193.0" prefHeight="4.0" prefWidth="818.0" />
-      <Button fx:id="btnVerPrecioBachas" layoutX="16.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioBachasClicked" style="-fx-background-color: FFAA00;" text="Precio Bachas">
+      <Separator layoutX="1.0" layoutY="193.0" prefHeight="4.0" prefWidth="818.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="6.0" />
+      <Button fx:id="btnVerPrecioBachas" layoutX="313.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioBachasClicked" prefHeight="33.0" prefWidth="204.0" style="-fx-background-color: FFAA00;" text="Precio Bachas">
          <font>
             <Font name="Arial Bold" size="18.0" />
          </font>
          <effect>
             <DropShadow />
          </effect></Button>
-      <Button fx:id="btnVerPrecioManoObra" layoutX="437.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioManoObraClicked" style="-fx-background-color: FFAA00;" text="Precio mano de Obra">
+      <Button fx:id="btnVerPrecioManoObra" layoutX="620.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioManoObraClicked" style="-fx-background-color: FFAA00;" text="Precio mano de Obra">
          <font>
             <Font name="Arial Bold" size="18.0" />
          </font>
          <effect>
             <DropShadow />
          </effect></Button>
-      <Button fx:id="btnVerPrecioMateriales" layoutX="209.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioMaterialesClicked" style="-fx-background-color: FFAA00;" text="Precio Materiales">
+      <Button fx:id="btnVerPrecioMateriales" layoutX="7.0" layoutY="149.0" mnemonicParsing="false" onAction="#btnVerPrecioMaterialesClicked" prefHeight="33.0" prefWidth="204.0" style="-fx-background-color: FFAA00;" text="Precio Materiales">
          <font>
             <Font name="Arial Bold" size="18.0" />
          </font>
